# Aurora-project

aurora_scuf/: README.md  fileClass.h  ru.auroraos.skuf_1.desktop  ru.auroraos.skuf_1.pro  ru.auroraos.skuf_1.pro.user.9583946  ru.auroraos.skuf_1.pro.user.da5ba7f  ru.auroraos.skuf_1.pro.user.fa9a2fe
aurora_scuf/qml/: skuf_1.qml
aurora_scuf/qml/cover/: DefaultCoverPage.qml
aurora_scuf/qml/pages/: MainPage.qml  SecondPage.qml
aurora_scuf/rpm/: ru.auroraos.skuf_1.changes.in  ru.auroraos.skuf_1.changes.run.in  ru.auroraos.skuf_1.spec
aurora_scuf/src/: ClientClass.cpp  ClientClass.h  client.cpp  client.h  fileclass.cpp  fileclass.h  main.cpp
aurora_scuf/translations/: ru.auroraos.skuf_1-ru.ts  ru.auroraos.skuf_1.ts
cmake_scuf/: CMakeLists.txt  ScannerClass.cpp  ScannerClass.h  ServerClass.cpp  ServerClass.h  Table.cpp  Table.h  TextClass.cpp  TextClass.h  cmake_skuf_test.cpp  cmake_skuf_test.h
httplib_client/: CMakeLists.txt  htttplib_client.cpp  htttplib_client.h
